--- a/deploy.yml
+++ b/deploy.yml
@@ -1,5 +1,7 @@
+
 ---
 - hosts: dev 
+  sudo: yes
   tasks:
    - name: Install add-apt-repostory
      become: yes
@@ -35,16 +37,18 @@
      unarchive: src=/home/ubuntu/tomcat/apache-tomcat-8.0.27.tar.gz dest=/home/ubuntu/tomcat remote_src=yes
   
    - name: Download Application
-     get_url: url=https://s3.amazonaws.com/demo985/LoginApp.war dest=/home/ubuntu
+     get_url: url=https://s3.amazonaws.com/vetinary-care-solutions/target/petclinic.war dest=/home/ubuntu
 
    - name: start apache-tomcat-8.0.27
-     shell: /home/ubuntu/tomcat/apache-tomcat-8.0.27/bin/startup.sh
+     command: /home/ubuntu/tomcat/apache-tomcat-8.0.27/bin/startup.sh
 
    - name: copy LoginApp.war
-     shell: cp /home/ubuntu/LoginApp.war /home/ubuntu/tomcat/apache-tomcat-8.0.27/webapps/
+     shell: cp /home/ubuntu/petclinic.war /home/ubuntu/tomcat/apache-tomcat-8.0.27/webapps/
 
    - name: stop apache-tomcat-8.0.27
      command: nohup "/home/ubuntu/tomcat/apache-tomcat-8.0.27/bin/shutdown.sh"
    
    - name: start apache-tomcat-8.0.27
      command: nohup "/home/ubuntu/tomcat/apache-tomcat-8.0.27/bin/startup.sh"
+
+    
