--- a/deploy.yml
+++ b/deploy.yml
@@ -41,7 +41,7 @@
    - name: start apache-tomcat-8.0.27
      command: /home/ubuntu/tomcat/apache-tomcat-8.0.27/bin/startup.sh
 
-   - name: copy LoginApp.war
+   - name: copy petclinic.war
      shell: cp /home/ubuntu/petclinic.war /home/ubuntu/tomcat/apache-tomcat-8.0.27/webapps/
 
    - name: stop apache-tomcat-8.0.27
