--- a/deploy.yml
+++ b/deploy.yml
@@ -35,12 +35,8 @@
    - name: Extract archive
      unarchive: src=/home/ubuntu/tomcat/apache-tomcat-8.0.27.tar.gz dest=/home/ubuntu/tomcat remote_src=yes
   
-  
-  
-  
-
-  
-  
+  - name: Download Application
+     get_url: url=https://s3.amazonaws.com/vetinary-care-solutions/target/petclinic.war dest=/home/ubuntu/tomcat/webapps
 
    - name: stop apache-tomcat-8.0.27
      command: nohup "/home/ubuntu/tomcat/apache-tomcat-8.0.27/bin/shutdown.sh"
